[gd_scene load_steps=8 format=3 uid="uid://dats3gsicw78r"]

[ext_resource type="FontFile" uid="uid://cg67qiwx24xxd" path="res://fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://cnhahdynwf0hx" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="Shader" uid="uid://1qnw5ia4vqnv" path="res://shaderPlayer.gdshader" id="2_8sq4i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8sq4i"]
shader = ExtResource("2_8sq4i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1xsix"]
shader = ExtResource("2_8sq4i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_640wx"]
shader = ExtResource("2_8sq4i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a2258"]
shader = ExtResource("2_8sq4i")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
material = SubResource("ShaderMaterial_8sq4i")
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
material = SubResource("ShaderMaterial_1xsix")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -140.0
offset_right = 98.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Start!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]

[node name="PowerUpTimeLeft" type="Label" parent="."]
visible = false
material = SubResource("ShaderMaterial_640wx")
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -78.0
offset_right = 336.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Time left: "
vertical_alignment = 2

[node name="Hp" type="Label" parent="."]
material = SubResource("ShaderMaterial_a2258")
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -254.0
offset_bottom = 61.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 50
text = "Lives: 3"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
